Remove all field evaluators except spatial field evaluator
And refine tests to better cover bounds parameter, fixing missing type information  in the docs